[package]
name = "rust-ipp"
version = "0.1.0"
edition = "2024"

[dependencies]
eventsource-client = "0.15.0"
futures = "0.3.31"
ipp = "5.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.16"
reqwest = { version = "0.11", features = ["blocking"] }
